# hassio-addons-voltronic

./: Dockerfile  build.yaml  config.yaml  repository.yaml
src/: entrypoint.sh  mqtt-init.sh  mqtt-push.sh
src/inverter-cli/: CMakeLists.txt  inverter.cpp  inverter.h
src/rootfs/etc/s6-overlay/s6-rc.d/inverter/: run
src/rootfs/etc/services.d/inverter/: finish  run
